hphp/hack/test/typecheck/references/refs_in_array/intrinsic.php.exp
File "intrinsic.php", line 5, characters 12-13:
Collection element cannot be marked as reference (Parsing[1002])
